--- a/index.html
+++ b/index.html
@@ -3,78 +3,173 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Shopping List Application</title>
-
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<script type="text/javascript" src="http://dev.jtsage.com/cdn/spinbox/latest/jqm-spinbox.min.js"></script>
 <meta name="viewport" content="width=decice-width, initial-scale=1, maximum-scale=1" />
 </head>
 <body>
-<div data-role="page"> <!-- beginning of page 1 -->
-<header data-role="header" data-theme="b">
-  <h1> Shopping List App </h1>
-</header>
-<article data-role="content">
-  <ul data-role="listview" data-filter="true">
-    <li> <a href="#apple">
-      <h1>Apples</h1>
-      <img src="Images/apples.jpg" height="50" width="100" alt="Apples" /> </a></li>
-    <li> <a href="#apricots">
-      <h1>Apricots </h1>
-      <img src="Images/apricots.jpg" height="50" width="100" alt="Apricots" /> </a> </li>
-    <li> <a href="#avocados">
-      <h1>Avocados </h1>
-      <img src="Images/avocados.jpg" height="50" width="100" alt="Avocados" /> </a> </li>
-    <li> <a href="#banana">
-      <h1>Banana </h1>
-      <img src="Images/bananas.jpg" height="50" width="100" alt="Banana" /> </a> </li>
-    <li> <a href="#cherries">
-      <h1>Cherries </h1>
-      <img src="Images/cherries.jpg" height="50" width="100" alt="Cherries" /> </a> </li>
-    <li> <a href="#kiwi">
-      <h1>Kiwi </h1>
-      <img src="Images/kiwi.jpg" height="50" width="100" alt="Kiwi" /> </a> </li>
-    <li> <a href="#RibEye">
-      <h1>Rib Eye </h1>
-      <img src="Images/ribeye_image.jpg" height="50" width="100" alt="Ribeye" /> </a> </li>
-    <li> <a href="#bacon">
-      <h1>Bacon </h1>
-      <img src="Images/bacon_meat.jpg" height="50" width="100" alt="Bacon" /> </a> </li>
-    <li> <a href="#lamb">
-      <h1>Lamb </h1>
-      <img src="Images/lamb_meat.jpg" height="50" width="100" alt="Meat" /> </a> </li>
-    <li> <a href="#chicken">
-      <h1>Chicken </h1>
-      <img src="Images/chicken_meat.jpg" height="50" width="100" alt="Chicken" /> </a> </li>
-    <li> <a href="#spaghetti">
-      <h1>Spaghetti </h1>
-      <img src="Images/spaghetti_pasta.jpg" height="50" width="100" alt="Spaghetti" /> </a> </li>
-    <li> <a href="#mac">
-      <h1>Macaroni </h1>
-      <img src="Images/mac_pasta.jpg" height="50" width="100" alt="Macaroni" /> </a> </li>
-    <li> <a href="#brownrice">
-      <h1>Brown Rice</h1>
-      <img src="Images/brown-rice_pasta.jpg" height="50" width="100" alt="Brown Rice" /> </a> </li>
-    <li> <a href="#cheese">
-      <h1>Cheese</h1>
-      <img src="Images/cheese_dairy.jpg" height="50" width="100" alt="Cheese" /> </a> </li>
-    <li> <a href="#milk">
-      <h1>Milk</h1>
-      <img src="Images/milk_dairy.jpg" height="50" width="100" alt="Milk" /> </a> </li>
-    <li> <a href="#detergents">
-      <h1>Detergents</h1>
-      <img src="Images/detergents_toiletries.jpg" height="50" width="100" alt="Detergents" /> </a> </li>
-  </ul>
-</article>
-<footer data-role="footer" data-position="fixed" data-theme="b">
-  <nav data-role="navbar">
-    <ul>
-      <li><a href="#" data-icon="home"> Menu </a></li>
-      <li><a href="#" data-icon="grid"> Shopping List</a></li>
-      <li><a href="#" data-icon="info"> Info</a></li>
+
+<script>
+
+function gotoQuantity(obj)
+{
+	$.mobile.changePage("#page2");
+	vegetableschosen = $(obj).text();
+	$("#vegname").text(vegetableschosen);
+}
+
+function addtolist()
+{
+	
+}
+
+</script>
+
+
+<div data-role="page" id="page1">
+  <!-- beginning of page 1 -->
+  <header data-role="header" data-theme="b">
+    <h1> Shopping List App </h1>
+  </header>
+  <article data-role="content">
+    <ul data-role="listview" data-filter="true" data-autodividers="true" data-inset="true">
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Apples</h1>
+        <img src="Images/apples.jpg" height="50" width="100" alt="Apples" /> </a></li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Apricots </h1>
+        <img src="Images/apricots.jpg" height="50" width="100" alt="Apricots" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Avocados </h1>
+        <img src="Images/avocados.jpg" height="50" width="100" alt="Avocados" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Banana </h1>
+        <img src="Images/bananas.jpg" height="50" width="100" alt="Banana" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Bacon </h1>
+        <img src="Images/bacon_meat.jpg" height="50" width="100" alt="Bacon" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Brown Rice</h1>
+        <img src="Images/brown-rice_pasta.jpg" height="50" width="100" alt="Brown Rice" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Cherries </h1>
+        <img src="Images/cherries.jpg" height="50" width="100" alt="Cherries" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Chicken </h1>
+        <img src="Images/chicken_meat.jpg" height="50" width="100" alt="Chicken" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Cheese</h1>
+        <img src="Images/cheese_dairy.jpg" height="50" width="100" alt="Cheese" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Detergents</h1>
+        <img src="Images/detergents_toiletries.jpg" height="50" width="100" alt="Detergents" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Kiwi </h1>
+        <img src="Images/kiwi.jpg" height="50" width="100" alt="Kiwi" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Lamb </h1>
+        <img src="Images/lamb_meat.jpg" height="50" width="100" alt="Meat" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Macaroni </h1>
+        <img src="Images/mac_pasta.jpg" height="50" width="100" alt="Macaroni" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Milk</h1>
+        <img src="Images/milk_dairy.jpg" height="50" width="100" alt="Milk" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Rib Eye </h1>
+        <img src="Images/ribeye_image.jpg" height="50" width="100" alt="Ribeye" /> </a> </li>
+      <li> <a onclick="gotoQuantity(this)">
+        <h1>Spaghetti </h1>
+        <img src="Images/spaghetti_pasta.jpg" height="50" width="100" alt="Spaghetti" /> </a> </li>
     </ul>
-  </nav>
-</footer>
-</div> <!-- End of page 1 -->
+  </article>
+  <footer data-role="footer" data-position="fixed" data-theme="b">
+    <nav data-role="navbar">
+      <ul>
+        <li><a href="#page4" data-icon="grid"> Shopping List</a></li>
+        <li><a href="#page3" data-icon="info"> Info</a></li>
+      </ul>
+    </nav>
+  </footer>
+</div>
+<!-- End of page 1 -->
+
+<div data-role="page" id="page2">
+  <!-- beginning of page 2 -->
+  <header data-role="header" data-theme="b">
+    <h1> Choose Quantity </h1>
+  </header>
+  <div>
+  <h2 id="vegname"> </h2>
+ </div>
+  
+  <div class="ui-field-contain">
+    <br>
+    <br>
+    <input type="text" data-role="spinbox" name="spin" id="spin" value="0" min="0" max="100"/>
+</div>
+
+<button onclick="addtolist()"> Add to list </button>
+  
+  <footer data-role="footer" data-position="fixed" data-theme="b">
+    <nav data-role="navbar">
+      <ul>
+        <li><a href="#page1" data-icon="home"> Home </a></li>
+        <li><a href="#page4" data-icon="grid"> Shopping List</a></li>
+        <li><a href="#page3" data-icon="info"> Info</a></li>
+      </ul>
+    </nav>
+  </footer>
+</div>
+<!-- end of page 2 -->
+
+<div data-role="page" id="page3">
+  <!-- beginning of page 3 -->
+  <header data-role="header" data-theme="b">
+    <h1> Instructions </h1>
+  </header>
+  <article data-role="content">
+    <h2> Add Item to the Shopping List </h2>
+    <ul>
+      Choose the item you need to buy from the list!
+    </ul>
+    <ul>
+      Enter the quantity
+    </ul>
+    <ul>
+      Click on 'Add to shopping list'
+    </ul>
+    <h2> Navigate throughout the App </h2>
+    <p> This application is very simple to use and you just need to click on either the Home button to go the Main Page or the Shopping List button at the bottom of the screen to view your shopping list! </p>
+  </article>
+  <footer data-role="footer" data-position="fixed" data-theme="b">
+    <nav data-role="navbar">
+      <ul>
+        <li><a href="#page1" data-icon="home"> Home </a></li>
+        <li><a href="#page4" data-icon="grid"> Shopping List</a></li>
+      </ul>
+    </nav>
+  </footer>
+</div>
+<!-- end of page 3 -->
+
+<div data-role="page" id="page4">
+  <!-- beginning of page 4 -->
+  <header data-role="header" data-theme="b">
+    <h1> Shopping List </h1>
+  </header>
+  <article data-role="content"> </article>
+  <footer data-role="footer" data-position="fixed" data-theme="b">
+    <nav data-role="navbar">
+      <ul>
+        <li><a href="#page1" data-icon="home"> Home </a></li>
+        <li><a href="#page3" data-icon="info"> Info</a></li>
+      </ul>
+    </nav>
+  </footer>
+</div>
+<!-- end of page 4 -->
 </body>
 </html>
